# SmartIt

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  DoxyfileDevel  README.md  README.rst  all_8hpp.html  all_8hpp__incl.map  all_8hpp__incl.md5  all_8hpp_source.html  annotated.html  array.hpp  array_8hpp.html  array_8hpp__dep__incl.map  array_8hpp__dep__incl.md5  array_8hpp__incl.map  array_8hpp__incl.md5  array_8hpp_source.html  basic_types.hpp  classes.html  classsmit_1_1array-members.html  classsmit_1_1array.html  classsmit_1_1array__coll__graph.map  classsmit_1_1array__coll__graph.md5  classsmit_1_1array__inherit__graph.md5  classsmit_1_1point__3d__proto-members.html  classsmit_1_1point__3d__proto.html  classsmit_1_1point__3d__proto__coll__graph.md5  classsmit_1_1point__3d__proto__inherit__graph.map  classsmit_1_1point__3d__proto__inherit__graph.md5  classsmit_1_1point__with__vector__3d__proto-members.html  classsmit_1_1point__with__vector__3d__proto.html  classsmit_1_1point__with__vector__3d__proto__coll__graph.map  classsmit_1_1point__with__vector__3d__proto__coll__graph.md5  classsmit_1_1point__with__vector__3d__proto__inherit__graph.md5  classsmit_1_1vector-members.html  classsmit_1_1vector.html  classsmit_1_1vector__coll__graph.md5  (+91 more)
include/smartit/: all.hpp  array.hpp  containers.hpp  data_object.hpp  iterator.hpp  test.hpp  traits.hpp  types.hpp  utils.hpp  value.hpp  vector.hpp
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  functions_f.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  (+3 more)
smartit/: basic_types.hpp  container_types.hpp  data_object.hpp  vector.hpp
test/: test.cpp  test_containers.cpp  test_data_object_example.cpp  test_general.cpp  test_timing.cpp  test_types.cpp
timing/: instruction.cpp  make_plots.py  timing.cpp
